﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2006-02-21 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/common.lib.php PMA_getUvaCondition():
      do not test for isset but strlen on orgname of table

2006-02-20 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.8.0-rc1 released

2006-02-20 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/dbi/mysqli.dbi.lib.php:
      - fixed undefined MYSQLI_BINARY_FLAG constant
      - documentation
    * server_status.php:
      - RFE #1434196 More significant digits in /status
      - replaced number_format() with PMA_formatNumber()
      - coding standards
    * js/querywindow.js, css/phpmyadmin.css.php:
      - RFE #1433382 visulal feat. request for left bar
    * sql.php:
      - fixed bug #1431422 Safari: Print view prints blank page

2006-02-19 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: re-establish previous error reporting mode
    * sql.php: bug #1434576, undefined variable $db
    * libraries/storage_engines.lib.php: bug #1434578, missing argument
      for __construct()
    * Documentation.html: bug #1433633, document consequences of having
      a .htaccess file, thanks to Isaac Bennetch

2006-02-19 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/common.lib.php PMA_getUvaCondition():
       - fixed missing $analyzed_sql (partly bug #1431615)
       - added table names to column names (partly bug #1431615)
       - simplified search for alias
    * libraries/dbi/mysqli.dbi.lib.php:
      - make use of MYSQLI_* constants
      - added column types newdecimal and bit

2006-02-18 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php: bug #1415465, undefined $sql_query
    * libraries/common.lib.php: bug #1377215, errors with E_STRICT

2006-02-18 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/sql_query_form.lib.php: